package edu.uees.patrones.builder;

public enum EstadoReserva {
    SOLICITADA,
    CONFIRMADA,
    REPROGRAMADA,
    CANCELADA,
    COMPLETADA
}
