@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

title Builder - Construcción de Reserva

abstract class Usuario {
  - id: String
  - nombre: String
  - email: String
  + getId(): String
  + getNombre(): String
  + getEmail(): String
}

class Estudiante {
  - carrera: String
  + getCarrera(): String
}

class Docente {
  - especialidad: String
  + getEspecialidad(): String
}

class HorarioDisponible {
  - id: String
  - docente: Docente
  - inicio: LocalDateTime
  - fin: LocalDateTime
  + getId(): String
  + getDocente(): Docente
  + getInicio(): LocalDateTime
  + getFin(): LocalDateTime
}

enum EstadoReserva {
  SOLICITADA
  CONFIRMADA
  REPROGRAMADA
  CANCELADA
  COMPLETADA
}

class Reserva {
  - id: String
  - estudiante: Estudiante
  - horario: HorarioDisponible
  - estado: EstadoReserva
  - tema: String
  - observaciones: String
  - enviarRecordatorio: boolean
  + confirmar(): void
  + cancelar(): void
  + reprogramar(nuevoHorario: HorarioDisponible): void
  + completar(): void
}

class ReservaBuilder <<Builder>> {
  - id: String
  - estudiante: Estudiante
  - horario: HorarioDisponible
  - tema: String = "Sin especificar"
  - observaciones: String = "Sin observaciones"
  - enviarRecordatorio: boolean = false
  + id(id: String): ReservaBuilder
  + estudiante(estudiante: Estudiante): ReservaBuilder
  + horario(horario: HorarioDisponible): ReservaBuilder
  + tema(tema: String): ReservaBuilder
  + observaciones(observaciones: String): ReservaBuilder
  + enviarRecordatorio(valor: boolean): ReservaBuilder
  + build(): Reserva
  - validarObligatorios(): void
}

Usuario <|-- Estudiante
Usuario <|-- Docente
HorarioDisponible --> Docente : docente
Reserva --> Estudiante : estudiante
Reserva --> HorarioDisponible : horario
Reserva --> EstadoReserva : estado
ReservaBuilder ..> Reserva : construye
ReservaBuilder --> Estudiante
ReservaBuilder --> HorarioDisponible
@enduml
